Kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-ps-dev
  labels: 
    app: ps-dev
