Kubernetes/07-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: project-ps-dev
  labels:
    app: ps-dev
spec:
  clusterIP: None
  selector:
    app: ps-dev
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
