Kubernetes/08-service-prestashop.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-prestashop
  namespace: project-ps-dev
spec:
  selector:
    app: ps-dev
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
