Kubernetes/12-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-prestashop
  namespace: project-ps-dev
spec:
  selector:
    app: ps-dev
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
