Kubernetes/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: project-ps-dev
  labels:
    app: ps-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "project-ps-cert-dev"
    kubernetes.io/ingress.global-static-ip-name: "project-ip-dev"
    networking.gke.io/v1beta1.FrontendConfig: "project-frontendconfig-dev"
spec:
  rules:
  - host: "prestashop.betaroiup.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-prestashop
            port:
              number: 80
